--- a/SAMA.BanService/appsettings.json
+++ b/SAMA.BanService/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Kafka": {
+        "BootstrapServers": "localhost:9092",
+        "GroupId": "sama-group"
     }
-  },
-  "AllowedHosts": "*"
 }
