--- a/SAMA.CallbackService/appsettings.json
+++ b/SAMA.CallbackService/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Kafka": {
+        "BootstrapServers": "localhost:9092",
+        "GroupId": "sama-group",
+        "AutoOffsetReset": "Earliest",
+        "EnableAutoCommit": false,
+        "AllowAutoCreateTopics": true
     }
-  },
-  "AllowedHosts": "*"
 }
