--- a/SAMA.CoreBankingService/appsettings.json
+++ b/SAMA.CoreBankingService/appsettings.json
@@ -8,9 +8,13 @@
     "AllowedHosts": "*",
     "Kafka": {
         "BootstrapServers": "localhost:9092",
-        "GroupId": "sama-group",
+        "GroupId": "core-banking-group",
         "AutoOffsetReset": "Earliest",
-        "EnableAutoCommit": false,
-        "AllowAutoCreateTopics": true
+        "EnableAutoCommit": false
+    },
+    "CoreBanking": {
+        "BaseUrl": "https://core-banking-api.internal",
+        "ApiKey": "your-api-key-here",
+        "TimeoutSeconds": 30
     }
 }
