--- a/SAMA.MonitoringService/appsettings.json
+++ b/SAMA.MonitoringService/appsettings.json
@@ -8,6 +8,9 @@
     "AllowedHosts": "*",
     "Kafka": {
         "BootstrapServers": "localhost:9092",
-        "GroupId": "sama-group"
+        "GroupId": "sama-group",
+        "AutoOffsetReset": "Earliest",
+        "EnableAutoCommit": false,
+        "AllowAutoCreateTopics": true
     }
 }
